# urimessage

./: README.md  pyproject.toml  urimessage.markpact.md
data/: events.jsonl
markpacts/: urimessage.markpact.md
tests/: test_import.py  test_manifest.py  test_runtime.py
urimessage/: manifest.yaml
