[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urimessage"
version = "0.1.0"
description = "message:// URI capability pack for urisys-node"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "urisys contributors" }, { name = "Tom Sapletta", email = "tom@sapletta.com" }]
keywords = ["uri", "urisys", "urimessage", "message"]
dependencies = ["urisysedge>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "uricore>=0.1.8"]

[tool.uv.sources]
urisysedge = { path = "../urisysedge", editable = true }
uricore = { path = "../uricore", editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["urimessage*"]

[tool.setuptools.package-data]
urimessage = ["manifest.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
